--- a/Oblqo/packages.config
+++ b/Oblqo/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
+  <package id="Mono.Posix" version="4.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
   <package id="NReco.VideoConverter" version="1.0.8.0" targetFramework="net45" />
   <package id="UnidecodeSharpFork" version="1.0.0" targetFramework="net45" />
